adds manifest link

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="manifest"
+      href="./dist/manifest.962167312ee5cb29296096604dd9f946.json"
+    />
 
     <title>SpendSave</title>
   </head>
